# sb100_agents

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  start.ps1
.claude/: CLAUDE.md  enforcement.conf  instructions.md  issue-template.md  pr-template.md  quick-ref.md  registry-archive.md  registry.md  tasks.md
.claude/hooks/: commit-msg  post-merge  pre-commit  pre-push
.claude/rules/: 00-trava-seguranca.md  05-convencoes.md  06-crura.md  08-registro-projeto.md  10-modelo-e-atencao.md
.claude/tasks/: TASK-T17.md  TASK-T18.md  TASK-T21.md  TASK-T22.md  TASK-T23.md  TASK-T24-UI.md  TASK-T24.md  TASK-T25.md  TASK-T26.md  TASK-T27.md  TASK-T29.md  TASK-T30.md  TASK-T31.md  TASK-T32.md  TASK-T33.md  TASK-T34.md  TASK-T35.md  TASK-T36.md
.github/: pipeline.yml
.github/workflows/: ci.yml  claude-auto.yml  claude-respond.yml  docker-build.yml
agents/: agent.py
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  auth.py  chat.py  health.py
auth/: security.py
core/: __init__.py  config.py  ollama_clients.py  schemas.py
database/: db.py  models.py  semantic_chunker.py
eval/: README.md  __init__.py  _utils.py  collect_references.py  generate_questions.py  judge.py  report.py  run_evaluation.py
frontend/smartb100/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/smartb100/src/: App.css  App.jsx  index.css
frontend/smartb100/src/components/: ChatScreen.jsx  HallucinationPanel.jsx  MainChat.jsx  Sidebar.jsx  StartScreen.jsx  index.js
frontend/smartb100/src/contexts/: AuthContext.jsx
frontend/smartb100/src/hooks/: useChat.js
frontend/smartb100/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/smartb100/src/services/: api.js
generation/: __init__.py  llm.py
memory/: __init__.py  conversation.py
nginx/: default.conf
profiling/: __init__.py  intent_filter.py  profile.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/archives/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/archives/0/segments/8456948d-f3ef-4a45-b17c-8decf268a00e/: mutable_id_tracker.mappings
qdrant_storage/collections/archives_v2/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/archives_v2/0/segments/cdc7a1de-f2e7-4679-9352-a442779cbdeb/: mutable_id_tracker.mappings
qdrant_storage/collections/collections/0/: newest_clocks.json
retrieval/: __init__.py  embedder.py  ollama_embeddings.py  vector_store.py
scripts/: ingest.py
semantic_entropy/: __init__.py  compute_entropy.py  response_generator.py  shannon_entropy.py  similarity_clustering.py
tests/: conftest.py  test_auth.py  test_chat_concurrency.py  test_chat_ui.py  test_config.py  test_conversation.py  test_db.py  test_embedder.py  test_eval.py  test_integration.py  test_llm.py  test_ollama_clients.py  test_schemas.py  test_vector_store.py  test_verification.py
ui/: __init__.py  chat_ui.py
verification/: __init__.py  entropy.py  gate.py
