[project]
name = "smartb100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "numpy>=1.26.0",
    "ollama>=0.2.0",
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "uvicorn>=0.29.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
]
